[package]
name = "amd-apcb"
version = "0.1.0"
authors = ["Oxide Computer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
four-cc ={ version =  "0.2.0", features = ["serde", "schemars"] }
memoffset = "0.5"
modular-bitfield = "0.11.2"
#
# In order to use macros as discriminants in enums that make use of derive
# macros (e.g., AsBytes, FromPrimitive), we need the syn crate to have "full"
# enabled. The easiest way to do this is to use num-derive's "full-syntax",
# which passes "full" through to syn.
#
num-derive = { version = "0.3.0", features = [ "full-syntax" ] }
num-traits = { version = "0.2.12", default-features = false }
paste = "1.0"
pre = "0.2.1"
static_assertions = "1.1.0"
strum = "0.23"
strum_macros = "0.23.1"
zerocopy = "0.6.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde-hex = { version = "0.1.0", optional = true }
schemars = { version = "0.8.8", optional = true }
parse_int = { version = "0.6.0", optional = true }

[features]
default = []
std = []
schemars = ["std", "dep:schemars"]
serde = ["std", "dep:serde", "dep:serde-hex", "dep:parse_int"]
