[package]
name = "amd-apcb"
version = "0.3.0"
authors = ["Oxide Computer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# newer one than the one in zerocopy--required for WriteBytesExt (used by Parameters).
byteorder = { version = "1.4.3", default-features = false }
four-cc = { version =  "0.3.0", default-features = false }
memoffset = "0.5"
modular-bitfield = { version = "0.11.2", default-features = false }
#
# In order to use macros as discriminants in enums that make use of derive
# macros (e.g., AsBytes, FromPrimitive), we need the syn crate to have "full"
# enabled. The easiest way to do this is to use num-derive's "full-syntax",
# which passes "full" through to syn.
#
num-derive = { version = "0.3.0", features = [ "full-syntax" ] }
num-traits = { version = "0.2.12", default-features = false }
paste = "1.0"
pre = { version = "0.2.1", default-features = false, features = [] }
static_assertions = "1.1.0"
zerocopy = "0.6.1"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde-hex = { version = "0.1.0", optional = true }
schemars = { version = "0.8.8", optional = true }
parse_int = { version = "0.6.0", optional = true }
thiserror = { version = "1.0.38", optional = true }

[features]
default = ["std"]
std = ["byteorder/std", "four-cc/std", "thiserror"]
schemars = ["std", "dep:schemars", "four-cc/schemars"]
serde = ["std", "dep:serde", "dep:parse_int", "four-cc/serde"]
serde-hex = ["std", "dep:serde", "dep:serde-hex"]

[dev-dependencies]
serde_yaml = "0.8.24" # for the example
