workspace = { members = [ "xtask" ] }

[package]
name = "amd-apcb"
version = "0.5.2"
authors = ["Oxide Computer"]
edition = "2024"
license = "MPL-2.0"

[dependencies]
# newer one than the one in zerocopy--required for WriteBytesExt (used by Parameters).
byteorder = { version = "1.4", default-features = false }
four-cc = { version =  "0.4", default-features = false }
memoffset = "0.9"
modular-bitfield = { version = "0.11", default-features = false }
num-derive = { version = "0.4", features = [ ] }
num-traits = { version = "0.2", default-features = false }
paste = "1.0"
static_assertions = "1.1"
zerocopy = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde-hex = { version = "0.1", optional = true }
schemars = { version = "0.8", optional = true }
parse_int = { version = "0.9", optional = true }
thiserror = { version = "2.0", optional = true }

[features]
default = ["std"]
std = ["byteorder/std", "four-cc/std", "thiserror"]
schemars = ["std", "dep:schemars", "four-cc/schemars"]
serde = ["std", "dep:serde", "dep:parse_int", "four-cc/serde"]
serde-hex = ["std", "dep:serde", "dep:serde-hex"]

[dev-dependencies]
serde_yaml = "0.9" # for the example
